Revamp duplicate message stacking to work with new chat characters and chat tabs
Fix alternative duplicate message stacking method, still doesn't work with chat tabs

Make duplicate message stacking work with chat tabs