@@ -1,19 +1,17 @@
 package cf.avicia.avomod2.client.eventhandlers.chatevents;
 
 import cf.avicia.avomod2.client.configs.ConfigsHandler;
+import cf.avicia.avomod2.utils.Utils;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.hud.ChatHud;
 import net.minecraft.client.gui.hud.ChatHudLine;
 import net.minecraft.text.Text;
-import net.minecraft.util.ActionResult;
 
 import java.util.List;
-import java.util.Optional;
 
 public class StackDuplicateMessages {
 
     private static Text lastMessage = null;
-    private static ChatHudLine.Visible lastVisibleMessage = null;
     private static int duplicateCount = 1;
 
     public static Text onMessage(Text message) {
@@ -23,31 +21,34 @@ public class StackDuplicateMessages {
             ChatHud chatHud = MinecraftClient.getInstance().inGameHud.getChatHud();
             List<ChatHudLine.Visible> visibleMessages = chatHud.visibleMessages;
             List<ChatHudLine> messages = chatHud.messages;
-            if (lastMessage != null && lastMessage.equals(message)) {
-                duplicateCount++;
-                // Visible messages are split per line, not per message, so remove all lines that were created at
-                // the same time as the last message to remove the visible message
-                if (!visibleMessages.isEmpty()) {
-                    while (!visibleMessages.get(0).equals(lastVisibleMessage)) {
-                        visibleMessages.remove(0);
-                        if (visibleMessages.isEmpty()) break;
-                    }
-                    messages.remove(0);
+            if (messages.isEmpty()) {
+                return message;
+            }
+            if (!message.equals(lastMessage)) {
+                duplicateCount = 1;
+            }
+            if (message.equals(lastMessage) && MinecraftClient.getInstance().inGameHud.getTicks() == messages.getFirst().creationTick()) {
+                // Allow duplicates created at the exact same time to not break Wynntils chat tabs.
+                // The chat tabs call ChatHud's addMessage twice at the same time for it to appear in two tabs,
+                // for this mod however they look like distinct messages, so I make the assumption here that two
+                // identical messages created at the exact same time are a byproduct of chat tabs and don't filter them.
+                return message;
+            }
+            lastMessage = message;
+            if (Utils.getChatMessageWithOnlyMessage(messages.getFirst().content()).equals(Utils.getChatMessageWithOnlyMessage(message))) {
+                for (int i : Utils.getVisibleMessagesByMessageIndex(0)) {
+                    visibleMessages.remove(i);
                 }
-
+                messages.removeFirst();
+                duplicateCount++;
                 // If the previous message is successfully deleted add the duplicate count to the new message
                 // This makes it appear as the previous message gets a number added to it, since they have the same text
                 Text tmpMessage = Text.of("");
                 tmpMessage.getSiblings().add(message);
                 tmpMessage.getSiblings().add(Text.of((message.getString().endsWith(" ") ? "" : " ") + String.format("§7(%s)", duplicateCount)));
                 message = tmpMessage;
-            } else {
-                duplicateCount = 1;
-                lastMessage = message;
             }
-            if (!visibleMessages.isEmpty()) {
-                lastVisibleMessage = visibleMessages.get(0);
-            }
+
         } catch (Exception e) {
             e.printStackTrace();
         }
